--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-t-t",
-  "version": "0.1.0",
+  "name": "rrs-starter-kit",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@babel/core": "7.2.2",
